Partial functionality - check ppconfig correctness

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,7 +7,7 @@
     <title>Auth Boilerplate</title>
 </head>
 <body>
-    <a href="/auth/github">Login with GitHub</a>
+    <%- include ./partials/nav %>
     <%- body %>
 </body>
 </html>
